# physalis

./: Cargo.toml  README.md
.github/workflows/: pages.yml
crates/cad-core/: Cargo.toml
crates/cad-core/src/: lib.rs
crates/cad-geom/: Cargo.toml
crates/cad-geom/src/: lib.rs
crates/cad-protocol/: Cargo.toml
crates/cad-protocol/src/: lib.rs
crates/cad-render/: Cargo.toml
crates/cad-render/src/: lib.rs  native_stub.rs  wasm.rs
crates/cad-server/: Cargo.toml
crates/cad-server/src/: main.rs
crates/cad-web/: Cargo.toml
crates/cad-web/src/: lib.rs  ui_icons.rs  wasm_app.rs
web/: Trunk.toml  index.html  style.css
