[workspace]
resolver = "2"
members = [
  "crates/cad-core",
  "crates/cad-geom",
  "crates/cad-render",
  "crates/cad-protocol",
  "crates/cad-server",
  "crates/cad-web",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
