[package]
name = "cad-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cad-geom = { path = "../cad-geom" }
glam = "0.27"
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "Document",
  "Window",
  "Element",
  "MouseEvent",
  "WheelEvent",
  "Event",
  "EventTarget"
] }
