[package]
name = "cad-web"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde_json.workspace = true
glam = "0.27"
cad-core = { path = "../cad-core" }
cad-geom = { path = "../cad-geom" }
cad-render = { path = "../cad-render" }
cad-protocol = { path = "../cad-protocol" }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Location",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "DomRect",
  "MouseEvent",
  "KeyboardEvent",
  "WebSocket",
  "MessageEvent",
  "Event",
  "CloseEvent"
] }
